<resources>
    <string name="default_negative_button_text_only">知道了</string>
    <string name="app_name">无秘</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="menu_subscribe">关注</string>
    <string name="menu_unsubscribe">取消关注</string>
    <string name="menu_share">分享</string>
    <string name="menu_remove">删除</string>
    <string name="menu_report_block">举报或屏蔽</string>
    <string name="guidance_close">知道了</string>
    <string name="block">屏蔽此人</string>
    <string name="unblock">解除屏蔽</string>
    <string name="label_forgot_password">忘记密码</string>
    <string name="share_to_mimi">分享到无秘</string>
    <string name="forgot_password">@string/label_forgot_password</string>
    <string name="remove_dialog_message">删除后不可撤销，确定删除？</string>
    <string name="toast_network_offline">设备未接入互联网，请检查后重试</string>
    <string name="toast_network_error">当前网络环境较差，请稍后重试</string>
    <string name="toast_server_error">服务器出错了，重试一下？</string>
    <string name="toast_authentication_invalid">你的账号已在其它地方登录，本地已下线，请注意账号安全</string>
    <string name="toast_error">出错了，给我们发送反馈报告？</string>
    <string name="toast_process_image_failed">图片处理失败，请重新选择</string>
    <string name="toast_no_match_app_found">没有检查到%1$s应用</string>
    <string name="toast_reported">已举报，感谢你帮助维护健康的社区氛围</string>
    <string name="toast_removed">已删除</string>
    <string name="toast_blocked">已屏蔽此人</string>
    <string name="toast_unblocked">已解除屏蔽</string>
    <string name="toast_load_failed">加载失败</string>
    <string name="toast_operation_failed">操作失败，再试一次？</string>
    <string name="toast_account_disabled">你的账号已被封禁</string>
    <string name="toast_send_failed">发送失败，再试一次？</string>
    <string name="toast_input_phone_number">请输入手机号码</string>
    <string name="toast_invalid_phone_numbers">手机号码格式不对</string>
    <string name="toast_input_password">请输入密码</string>
    <string name="toast_password_too_short">密码长度太短了</string>
    <string name="toast_operation_expired">操作已过期</string>
    <string name="toast_report_failed">举报失败，请重试</string>
    <string name="toast_non_exist_secret">该秘密已被删除</string>
    <string name="toast_subscribe">有更新时会提醒你</string>
    <string name="toast_unsubscribe">不再接收此秘密的提醒</string>
    <string name="toast_storage_full">手机存储空间已满，将影响应用正常使用，请及时清理</string>
    <string name="toast_report_group_chat_failed">举报失败</string>
    <string name="comment_action_chat">私聊</string>
    <string name="comment_action_like">点赞</string>
    <string name="comment_action_cancel_like">取消点赞</string>
    <string name="comment_action_report">举报</string>
    <string name="comment_action_remove">删除</string>
    <string name="report_dialog_title">举报</string>
    <string name="block_dialog_title">屏蔽此人的秘密</string>
    <string name="block_dialog_message">屏蔽后，我们将减少展示他发表的秘密，你可以在设置页面取消屏蔽</string>
    <string name="toast_weixin_not_installed">您的手机没有安装微信客户端</string>
    <string name="toast_weixin_version_not_support">当前微信版本不支持发送到朋友圈</string>
    <string name="toast_operate_on_non_exist_secret">该秘密已被删除</string>
    <string name="toast_weibo_not_installed">您的手机没有安装微博客户端</string>
    <string name="toast_renren_not_installed">未安装人人客户端，请安装后分享</string>
    <string name="toast_renren_not_supported">人人客户端版本过低，请安装新版后分享</string>
    <string name="toast_weibo_pro_not_supported">微博会员版暂不支持分享</string>
    <string name="toast_weibo_not_valid">请安装官方最新版的微博客户端</string>
    <string name="toast_weibosdk_not_support">您安装的微博客户端版本过低</string>
    <string name="toast_check_weibo_failed">验证新浪微博客户端出错，再试一次？</string>
    <string name="weixin">微信好友</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="renren">人人网</string>
    <string name="sms">短信</string>
    <string name="qq">QQ好友</string>
    <string name="qzone">QQ空间</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="share_to_renren">分享到人人</string>
    <string name="system_share">更多应用</string>
    <string name="share_chat">分享到聊天</string>
    <string name="title_invite_friend">邀请朋友</string>
    <string name="dialog_title_share_add_friends">邀请朋友</string>
    <string name="dialog_title_share_secret">@string/menu_share</string>
    <string name="dialog_title_share_question">让朋友来回答</string>
    <string name="dialog_title_share_group_chat">分享聊天</string>
    <string name="message_title_share_secret">分享个秘密</string>
    <string name="message_title_share_question">敢不敢回答这个问题</string>
    <string name="message_title_share_add_friend">有人一起玩无秘吗？请加我为朋友！</string>
    <string name="message_title_share_chat_group">邀请你加入群聊</string>
    <string name="message_share_chat_group">来匿名群聊「%1$s」，一起放肆地聊天！</string>
    <string name="sms_share_app">和我一起玩「无秘」吧！ %1$s %2$s</string>
    <string name="sms_share_secret">分享个秘密： %1$s %2$s</string>
    <string name="sms_share_question">敢不敢回答这个问题：%1$s %2$s</string>
    <string name="weibo_share_app">@string/sms_share_app</string>
    <string name="weibo_share_secret">"
//「%1$s」%2$s（分享自#无秘#）"</string>
    <string name="weibo_share_question">@string/sms_share_question</string>
    <string name="weixin_timeline_title_share_secret"> %1$s（分享自无秘）</string>
    <string name="weixin_timeline_title_share_question">敢不敢回答这个问题：%1$s</string>
    <string name="description_share_app">无秘是一个匿名的朋友圈，可以查看朋友们发表的八卦、爆料、真心话等各种秘密。</string>
    <string name="toast_share_to_qq_qzone_failed">分享失败，发送反馈？</string>
    <string name="toast_renren_authentication_cancel">人人账号验证已取消</string>
    <string name="toast_renren_authentication_failed">登录人人帐号出错，再试一次？</string>
    <string name="toast_get_image_failed">获取图片失败，再试一次？</string>
    <string name="label_album">相册</string>
    <string name="album_empty">找不到媒体</string>
    <string name="album_scanning">请稍候...</string>
    <string name="toast_image_has_been_deleted">图片已删除</string>
    <string name="dialog_title_password">密码</string>
    <string name="dialog_title_password_join">加入群聊</string>
    <string name="dialog_message_inter_password">请输入4位数字密码</string>
    <string name="dialog_button_cancel_password">取消</string>
    <string name="dialog_button_confirm_password_join">加入</string>
    <string name="dialog_button_confirm_password_set">设置</string>
    <string name="invite_dialog_message">你可以添加更多朋友，和他们匿名分享更多秘密。</string>
    <string name="invite_dialog_button_confirm">添加朋友</string>
    <string name="toast_num_new_feeds">%1$s个新秘密</string>
    <string name="feed_type_all">全部</string>
    <string name="feed_type_circle">朋友圈</string>
    <string name="feed_type_hot">热门</string>
    <string name="app_update">应用更新</string>
    <string name="update_checking">正在检查更新</string>
    <string name="update_now">立即更新</string>
    <string name="update_later">以后再说</string>
    <string name="is_latest_version">当前已是最新版%1$s版</string>
    <string name="update_to_latest_version">新版已发布(%1$s)，是否更新？</string>
    <string name="check_update_failed">检查更新失败，请稍候再试</string>
    <string name="must_update_to_new_version">版本过旧，需更新后才能使用</string>
    <string name="toast_download_error">下载更新失败</string>
    <string name="toast_install_failed">新版本程序已下载到%1$s，需要手动安装</string>
    <string name="notification_success_download">应用已下载</string>
    <string name="app_downloading">正在下载更新,请稍后</string>
    <string name="card_secret_unauthorized_title">可能错过了朋友的秘密</string>
    <string name="card_secret_unauthorized_content">「无秘」无法访问你的通讯录，因此无法识别你的朋友并展示他们的秘密。</string>
    <string name="card_secret_unauthorized_button_repair">点击修复</string>
    <string name="card_secret_unauthorized_button_repairing">正在重试访问通讯录</string>
    <string name="card_building_feed_content">正在为你准备来自朋友的秘密，请稍等几分钟后刷新查看</string>
    <string name="card_small_circle_content">%1$s个来自你朋友的秘密被隐藏</string>
    <string name="card_small_circle_unlock">解锁查看</string>
    <string name="card_small_circle_unlock_dialog_title">如何解锁？</string>
    <string name="card_small_circle_unlock_dialog_message">"为保护隐私，当至少要有3个朋友时，才能解锁。
请添加更多朋友，解锁后将立即提醒你。"</string>
    <string name="card_small_circle_unlock_dialog_button_confirm">添加朋友</string>
    <string name="card_small_circle_unlock_dialog_button_cancel">取消</string>
    <string name="card_nearby_not_enabled_content">"附近的秘密，你知道多少？
"</string>
    <string name="card_nearby_not_enabled_button_enable">开启附近的秘密</string>
    <string name="card_nearby_enabled_dialog_message">现在您可以查看附近的秘密了，可随时在设置中关闭。</string>
    <string name="card_guidance_title">「无秘」提了一个问题</string>
    <string name="card_guidance_button_anonymous_publish">匿名发表秘密</string>
    <string name="card_guidance_button_invite_friend">让朋友来回答</string>
    <string name="guidance_circle">「朋友圈」表示此秘密来自你添加的朋友或者朋友的朋友。</string>
    <string name="guidance_location">此秘密来自朋友圈外，推荐给你是因为朋友赞过或很多人赞。</string>
    <string name="guidance_friend">此秘密来自你添加的朋友，能猜到是谁发的吗 :)</string>
    <string name="guidance_friend_of_friend">此秘密来自你朋友的朋友，很可能你们也认识噢！</string>
    <string name="guidance_like">点赞可以鼓励楼主，还能把秘密传播给朋友。</string>
    <string name="guidance_back_to_top">点击顶部栏，可以快速返回顶部</string>
    <string name="guidance_back_to_top_click_logo">点击这里，可以快速返回顶部</string>
    <string name="xlist_view_header_hint_normal">下拉刷新</string>
    <string name="xlist_view_header_hint_ready">松开刷新数据</string>
    <string name="xlist_view_hint_loading">正在加载</string>
    <string name="xlist_view_header_last_time">上次更新时间：</string>
    <string name="xlist_view_footer_hint_normal">点击查看更多</string>
    <string name="xlist_view_footer_hint_ready">松开载入更多</string>
    <string name="action_notification">查看提醒</string>
    <string name="action_new_secret">发秘密</string>
    <string name="action_chat">聊天</string>
    <string name="action_more">更多</string>
    <string name="action_feedback">意见反馈</string>
    <string name="action_settings">@string/label_settings</string>
    <string name="action_invite">添加朋友</string>
    <string name="publish_bottom_pan_camera">拍照</string>
    <string name="publish_bottom_pan_album">相册</string>
    <string name="publish_bottom_pan_search">网络图库</string>
    <string name="publish_bottom_pan_tempalte">默认模板</string>
    <string name="publish_bottom_pan_effect">调整效果</string>
    <string name="commit_button">提交</string>
    <string name="edit_hint_password">密码</string>
    <string name="reset_password_edit_hint_phone_number">输入手机号码</string>
    <string name="reset_password_edit_hint_input_verification_code">输入验证码</string>
    <string name="reset_password_edit_hint_new_password">你的新密码</string>
    <string name="reset_password_edit_hint_repeat_new_password">再次确定新密码</string>
    <string name="change_password_edit_hint_current_password">当前密码</string>
    <string name="change_password_edit_hint_new_password">新密码</string>
    <string name="change_password_edit_hint_confirm_new_password">再次确认新密码</string>
    <string name="settings_title_blocked_user">@string/label_blocked_user</string>
    <string name="settings_title_sys_notification">系统消息</string>
    <string name="settings_title_check_update">检查更新</string>
    <string name="settings_title_privacy">@string/feedback_faq</string>
    <string name="settings_title_change_password">修改密码</string>
    <string name="settings_title_unlink">清除痕迹</string>
    <string name="settings_title_logout">退出登录</string>
    <string name="sms_invitation_content_hint">短信内容…</string>
    <string name="sms_invitation_sign_hint">署名（选填）</string>
    <string name="sms_invitation_sign_info">填写真实姓名，朋友们将更容易被邀请</string>
    <string name="default_anonymous_sms_content">一起来玩「无秘」吧，可看朋友们发的各种秘密，挺有意思。</string>
    <string name="create_group_chat_info_description_hint">描述一下想哪些朋友加入群聊，对发言的要求等</string>
    <string name="create_group_chat_info_password_hint">开启后，朋友需要输入密码才可加入群聊</string>
    <string name="group_chat_info_item_topic">主题</string>
    <string name="group_chat_info_item_member">成员</string>
    <string name="group_chat_info_item_password">密码</string>
    <string name="group_chat_info_item_description">简介</string>
    <string name="group_chat_info_password_item_password">密码</string>
    <string name="group_chat_info_password_item_description">开启后，朋友需要输入密码才可加入群聊</string>
    <string name="group_chat_info_password_item_current">当前密码</string>
</resources>