<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_action_new_secret"
        android:id="@id/action_new_secret"
        android:title="@string/action_new_secret"
        android:showAsAction="always" />
    <item
        android:id="@id/action_notification"
        android:title="@string/action_notification"
        android:showAsAction="always"
        android:actionLayout="@layout/notification_count_view" />
    <item
        android:id="@id/action_chat"
        android:title="@string/action_chat"
        android:showAsAction="always"
        android:actionLayout="@layout/chat_count_view" />
    <item
        android:icon="@drawable/ic_action_more"
        android:id="@id/action_more"
        android:title="@string/action_more"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@id/action_invite"
                android:title="@string/action_invite" />
            <item
                android:id="@id/action_feedback"
                android:title="@string/action_feedback" />
            <item
                android:id="@id/action_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>
</menu>