<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_like_big"
        android:id="@id/action_like_secret"
        android:showAsAction="always" />
    <item
        android:icon="@drawable/ic_action_more"
        android:id="@id/action_more"
        android:title="@string/action_more"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@id/action_share"
                android:title="@string/menu_share" />
            <item android:id="@id/action_subscribe" />
            <item
                android:id="@id/action_remove"
                android:title="@string/menu_remove" />
            <item
                android:id="@id/action_report_block"
                android:title="@string/menu_report_block" />
        </menu>
    </item>
</menu>