<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textSize="16.0sp" android:textColor="@android:color/black" android:textColorHint="@android:color/darker_gray" android:id="@id/sms_invitation_content" android:background="@drawable/edit_text_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/default_anonymous_sms_content" android:hint="@string/sms_invitation_content_hint" />
    <EditText android:textSize="16.0sp" android:textColorHint="@android:color/darker_gray" android:id="@id/sms_invitation_sign" android:background="@drawable/edit_text_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/sms_invitation_sign_hint">
        <requestFocus />
    </EditText>
    <TextView android:textColor="@android:color/darker_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/sms_invitation_sign_info" />
</LinearLayout>