<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:textSize="18.0sp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:gravity="center"
        android:id="@id/current_password"
        android:background="@drawable/edit_text_holo_light"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_edit_text_height"
        android:hint="@string/change_password_edit_hint_current_password"
        android:inputType="textPassword" />

    <EditText
        android:textSize="18.0sp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:gravity="center"
        android:id="@id/new_password"
        android:background="@drawable/edit_text_holo_light"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_edit_text_height"
        android:hint="@string/change_password_edit_hint_new_password"
        android:inputType="textPassword" />

    <EditText
        android:textSize="18.0sp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:gravity="center"
        android:id="@id/new_password_confirmation"
        android:background="@drawable/edit_text_holo_light"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_edit_text_height"
        android:hint="@string/change_password_edit_hint_confirm_new_password"
        android:inputType="textPassword" />

    <Button
        android:textSize="@dimen/single_button_text_size"
        android:textColor="@android:color/white"
        android:background="@drawable/dark_btn_bg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/single_button_height"
        android:layout_marginTop="16.0dip"
        android:text="@string/commit_button"
        android:onClick="clickOnCommit" />
</LinearLayout>