<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/image" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@null" />
    <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="60.0dip" android:text="@string/card_guidance_title" android:layout_centerHorizontal="true" />
    <ImageView android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="60.0dip" android:src="@drawable/ic_card_refresh" android:layout_alignParentRight="true" android:onClick="clickOnRefreshGuidanceCard" android:contentDescription="@null" />
    <TextView android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
    <LinearLayout android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textColor="@android:color/white" android:background="@drawable/dark_btn_bg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/card_guidance_button_anonymous_publish" android:layout_weight="1.0" android:onClick="clickOnPublishAnonymously" style="?android:attr/buttonBarButtonStyle" />
        <Button android:textColor="@color/white_button_text" android:background="@drawable/white_btn_bg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/card_guidance_button_invite_friend" android:layout_weight="1.0" android:onClick="clickOnAnswerByFriend" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>