<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/hint_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_group_chat_info_description_hint" />
    <EditText android:textSize="16.0sp" android:textColor="@color/edit_box_content" android:textColorHint="@color/edit_box_content_hint" android:id="@id/edit_box" android:background="@drawable/edit_text_holo_light" android:padding="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:singleLine="true" android:inputType="textMultiLine" />
    <RelativeLayout android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:id="@id/password_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_hint_password" />
        <TextView android:textSize="15.0sp" android:textColor="@color/hint_text" android:id="@id/password_hint" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/create_group_chat_info_password_hint" android:layout_below="@id/password_title" />
        <CheckBox android:id="@id/password_enable_check_box" android:background="@null" android:layout_width="@dimen/check_box_width" android:layout_height="wrap_content" android:button="@drawable/slide_check_box" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="clickOnTogglePassword" />
        <View android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="10.0dip" android:layout_below="@id/password_hint" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/current_password_container" android:background="@drawable/item_background_holo_light" android:paddingTop="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="clickOnPassword">
        <TextView android:textSize="16.0sp" android:id="@id/current_password_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_password_edit_hint_current_password" />
        <TextView android:textSize="16.0sp" android:textColor="@color/hint_text" android:id="@id/current_password" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <View android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="10.0dip" android:layout_below="@id/current_password_title" />
    </RelativeLayout>
</LinearLayout>