<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:padding="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_chat_info_password_item_password" />
            <TextView android:textSize="16.0sp" android:textColor="@android:color/darker_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/group_chat_info_password_item_description" />
        </LinearLayout>
        <CheckBox android:layout_gravity="center_vertical" android:id="@id/check_box" android:background="@null" android:layout_width="@dimen/check_box_width" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:button="@drawable/slide_check_box" android:onClick="clickOnTogglePassword" />
    </LinearLayout>
    <include layout="@layout/chat_info_divider" />
    <LinearLayout android:orientation="vertical" android:id="@id/password_container" android:padding="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="clickOnPassword">
        <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_chat_info_password_item_current" />
        <TextView android:textSize="16.0sp" android:textColor="@android:color/darker_gray" android:id="@id/password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
    </LinearLayout>
    <include layout="@layout/chat_info_divider" />
</LinearLayout>