<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="20.0dip"
        android:paddingRight="20.0dip"
        android:paddingBottom="20.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="18.0sp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:gravity="center"
            android:id="@id/phone_number"
            android:background="@drawable/edit_text_holo_light"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/common_edit_text_height"
            android:hint="@string/reset_password_edit_hint_phone_number"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/common_edit_text_height">

            <EditText
                android:textSize="18.0sp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:gravity="center"
                android:id="@id/verification_code"
                android:background="@drawable/edit_text_holo_light"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:hint="@string/reset_password_edit_hint_input_verification_code"
                android:layout_weight="1.0"
                android:inputType="number" />

            <RelativeLayout
                android:id="@id/request_verification_code_layout"
                android:background="@drawable/edit_text_subfield_holo_light"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent">

                <com.leigo.android.view.CountDownTimerView
                    android:enabled="false"
                    android:textSize="16.0sp"
                    android:textColor="@android:color/white"
                    android:id="@id/request_verification_code"
                    android:background="@drawable/green_btn_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="30.0dip"
                    android:layout_centerInParent="true"
                    android:onClick="clickOnGetVerificationCode" />
            </RelativeLayout>
        </LinearLayout>

        <EditText
            android:textSize="18.0sp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:gravity="center"
            android:id="@id/new_password"
            android:background="@drawable/edit_text_holo_light"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/common_edit_text_height"
            android:hint="@string/reset_password_edit_hint_new_password"
            android:inputType="textPassword" />

        <EditText
            android:textSize="18.0sp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:gravity="center"
            android:id="@id/repeat_new_password"
            android:background="@drawable/edit_text_holo_light"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/common_edit_text_height"
            android:hint="@string/reset_password_edit_hint_repeat_new_password"
            android:inputType="textPassword" />

        <Button
            android:textSize="@dimen/single_button_text_size"
            android:textColor="@android:color/white"
            android:background="@drawable/dark_btn_bg"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/single_button_height"
            android:layout_marginTop="16.0dip"
            android:text="@string/commit_button"
            android:onClick="clickOnCommit" />
    </LinearLayout>
</ScrollView>